[gd_scene load_steps=2 format=3 uid="uid://bo2o0mwe3usc3"]

[ext_resource type="Script" uid="uid://u1vqm6gmpjwc" path="res://Scripts/pause_menu.gd" id="1_lj4oq"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_lj4oq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.247059)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -15.5
offset_right = 35.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="WindowButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Window size"

[node name="ExitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Exit"
